--- a/web/index.html
+++ b/web/index.html
@@ -84,6 +84,17 @@
         <!-- 动态插入：每行 [ 1号客 ] 起点 → 终点 (状态) [ ✖️ 下车 ] -->
       </ul>
       <p id="noPassengersHint" class="text-muted text-console py-2">暂无乘客，抢到单后点下方「添加至我的车厢」</p>
+
+      <!-- 入口主操作：按空座显示「显示地图」或「继续接单」 -->
+      <div id="entryActions" class="mt-6 flex flex-col gap-3">
+        <a id="btnShowMap" href="map.html" target="_blank" rel="noopener" class="hidden w-full py-4 rounded-xl bg-accent hover:bg-blue-600 text-white font-medium text-center text-big">
+          🗺️ 显示地图
+        </a>
+        <button type="button" id="btnContinueMatch" class="hidden w-full py-4 rounded-xl border-2 border-success text-success font-medium text-big">
+          💺 继续接单
+        </button>
+        <p id="entryHint" class="text-sm text-muted text-center"></p>
+      </div>
     </section>
 
     <!-- ========== 区块二：AI 调度模式控制台 ========== -->
@@ -93,8 +104,8 @@
       </h2>
       <div class="grid grid-cols-1 gap-3">
         <button type="button" data-mode="mode1" class="mode-btn btn-touch rounded-xl border-2 px-4 py-4 text-left flex items-center gap-3 bg-panel border-border hover:border-accent transition-colors">
-          <span class="text-2xl">🌙</span>
-          <span class="text-big font-medium">明日计划</span>
+          <span class="text-2xl">📅</span>
+          <span class="text-big font-medium">下次计划</span>
         </button>
         <button type="button" data-mode="mode2" class="mode-btn btn-touch rounded-xl border-2 px-4 py-4 text-left flex items-center gap-3 bg-panel border-border hover:border-accent transition-colors">
           <span class="text-2xl">🚗</span>
@@ -110,15 +121,11 @@
         </button>
       </div>
 
-      <!-- 明日计划展开：时间 + 目的地 -->
+      <!-- 下次计划展开：多批次（晚回程、次日出发、次日回程…探子/调度按每条找单） -->
       <div id="planPanel" class="mt-4 p-4 rounded-xl bg-[#0c0c0f] border border-border hidden">
-        <label class="block text-muted text-sm mb-1">计划出发时间</label>
-        <input type="text" id="planTime" placeholder="06:00" class="w-full bg-panel border border-border rounded-lg px-3 py-3 text-console mb-3" />
-        <label class="block text-muted text-sm mb-1">目的地</label>
-        <input type="text" id="planDest" placeholder="上海" class="w-full bg-panel border border-border rounded-lg px-3 py-3 text-console mb-3" />
-        <label class="block text-muted text-sm mb-1">出发地（可选）</label>
-        <input type="text" id="planOrigin" placeholder="如东荣生花苑" class="w-full bg-panel border border-border rounded-lg px-3 py-3 text-console mb-3" />
-        <button type="button" id="btnSavePlan" class="bg-accent text-white px-4 py-3 rounded-lg font-medium">保存规划</button>
+        <div id="planList" class="space-y-4 mb-4"></div>
+        <button type="button" id="btnAddPlan" class="w-full py-3 rounded-xl border border-dashed border-border text-muted font-medium mb-3">＋ 添加下一批计划</button>
+        <p class="text-sm text-muted">按时间排序，优先第 1 批找单。计划不删；当前批跑完后点「结束找单」即可进入下一批，历史计划保留。</p>
       </div>
 
       <!-- 参数微调 -->
@@ -278,11 +285,31 @@
         applyPassengerRows();
         renderPassengerList();
         saveStateToStorage();
+        updateEntryActions();
         if (cb) cb();
       })
       .catch(function (e) {
+        updateEntryActions();
         if (cb) cb();
       });
+  }
+
+  function updateEntryActions() {
+    var seatsEl = document.getElementById("emptySeats");
+    var emptySeats = seatsEl ? Math.max(0, parseInt(seatsEl.value, 10) || 0) : 0;
+    var btnMap = document.getElementById("btnShowMap");
+    var btnMatch = document.getElementById("btnContinueMatch");
+    var hint = document.getElementById("entryHint");
+    if (!btnMap || !btnMatch) return;
+    if (emptySeats === 0) {
+      btnMap.classList.remove("hidden");
+      btnMatch.classList.add("hidden");
+      if (hint) hint.textContent = "车已满，打开地图按路线接送；到达每站后在地图页点「已到达」推进。";
+    } else {
+      btnMap.classList.remove("hidden");
+      btnMatch.classList.remove("hidden");
+      if (hint) hint.textContent = "有空位，点「继续接单」让后端匹配顺路单；也可打开地图查看当前路线。";
+    }
   }
 
   function dropOffAndUpdateDb(orderId, newLoc, idx) {
@@ -360,7 +387,7 @@
   };
 
   // ---------- 模式切换 ----------
-  var modeLabels = { mode1: "明日计划", mode2: "半路吸尘器", mode3: "附近接力", pause: "停止接单" };
+  var modeLabels = { mode1: "下次计划", mode2: "半路吸尘器", mode3: "附近接力", pause: "停止接单" };
   function refreshMode() {
     var base = getApiBase();
     if (!base) return;
@@ -381,11 +408,68 @@
     var base = getApiBase();
     if (!base) return;
     fetch(base + "/planned_trip").then(function (r) { return r.json(); }).then(function (d) {
-      if (d.origin) document.getElementById("planOrigin").value = d.origin;
-      if (d.destination) document.getElementById("planDest").value = d.destination;
-      if (d.departure_time) document.getElementById("planTime").value = d.departure_time;
+      var plans = d.plans || [];
+      var list = document.getElementById("planList");
+      if (!list) return;
+      list.innerHTML = "";
+      plans.forEach(function (p, idx) {
+        var completed = p.completed === true;
+        var card = document.createElement("div");
+        card.className = "p-4 rounded-xl bg-panel border border-border" + (completed ? " opacity-75" : "");
+        card.setAttribute("data-index", String(idx));
+        var header = "第 " + (idx + 1) + " 批";
+        if (idx === 0 && !completed) header += "（优先找单）";
+        if (completed) header += " · 已结束找单";
+        card.innerHTML =
+          "<div class=\"text-muted text-sm font-medium mb-2\">" + header + "</div>" +
+          "<label class=\"block text-muted text-xs mb-1\">出发时间</label>" +
+          "<input type=\"text\" class=\"plan-time w-full bg-[#0c0c0f] border border-border rounded-lg px-3 py-2 text-console mb-2\" placeholder=\"06:00 或 2025-02-22 06:00\" value=\"" + (p.departure_time || "").replace(/"/g, "&quot;") + "\" " + (completed ? "readonly" : "") + " />" +
+          "<label class=\"block text-muted text-xs mb-1\">出发地</label>" +
+          "<input type=\"text\" class=\"plan-origin w-full bg-[#0c0c0f] border border-border rounded-lg px-3 py-2 text-console mb-2\" placeholder=\"如东荣生花苑\" value=\"" + (p.origin || "").replace(/"/g, "&quot;") + "\" " + (completed ? "readonly" : "") + " />" +
+          "<label class=\"block text-muted text-xs mb-1\">目的地</label>" +
+          "<input type=\"text\" class=\"plan-dest w-full bg-[#0c0c0f] border border-border rounded-lg px-3 py-2 text-console mb-3\" placeholder=\"上海\" value=\"" + (p.destination || "").replace(/"/g, "&quot;") + "\" " + (completed ? "readonly" : "") + " />" +
+          "<div class=\"flex gap-2\">" +
+          (completed ? "" : "<button type=\"button\" class=\"plan-save px-3 py-2 rounded-lg bg-accent text-white text-sm\">保存</button><button type=\"button\" class=\"plan-complete px-3 py-2 rounded-lg border border-muted text-muted text-sm\">结束找单</button>") +
+          "</div>";
+        if (!completed) {
+          card.querySelector(".plan-save").onclick = function () { savePlanAt(idx); };
+          card.querySelector(".plan-complete").onclick = function () { completePlanAt(idx); };
+        }
+        list.appendChild(card);
+      });
     });
   }
+  function completePlanAt(idx) {
+    var base = getApiBase();
+    if (!base) return;
+    if (!confirm("本批找单任务结束？计划保留，下一批将自动接上。")) return;
+    fetch(base + "/planned_trip/complete?index=" + idx, { method: "POST" })
+      .then(function () { document.getElementById("gpsStatus").textContent = "已结束找单，下一批接上"; loadPlannedTrip(); });
+  }
+  function savePlanAt(idx) {
+    var base = getApiBase();
+    if (!base) return;
+    var card = document.querySelector("#planList [data-index=\"" + idx + "\"]");
+    if (!card) return;
+    var body = {
+      index: idx,
+      origin: (card.querySelector(".plan-origin").value || "").trim() || "如东荣生花苑",
+      destination: (card.querySelector(".plan-dest").value || "").trim() || "上海",
+      departure_time: (card.querySelector(".plan-time").value || "").trim() || "06:00",
+      time_window_minutes: 30,
+      min_orders: 2,
+      max_orders: 4
+    };
+    fetch(base + "/planned_trip", { method: "PUT", headers: { "Content-Type": "application/json" }, body: JSON.stringify(body) })
+      .then(function () { document.getElementById("gpsStatus").textContent = "第 " + (idx + 1) + " 批计划已保存"; loadPlannedTrip(); });
+  }
+  document.getElementById("btnAddPlan").onclick = function () {
+    var base = getApiBase();
+    if (!base) return;
+    var body = { origin: "如东荣生花苑", destination: "上海", departure_time: "06:00", time_window_minutes: 30, min_orders: 2, max_orders: 4 };
+    fetch(base + "/planned_trip", { method: "POST", headers: { "Content-Type": "application/json" }, body: JSON.stringify(body) })
+      .then(function () { document.getElementById("gpsStatus").textContent = "已添加一批，请填写时间与地点后保存"; loadPlannedTrip(); });
+  };
   document.querySelectorAll(".mode-btn").forEach(function (btn) {
     btn.onclick = function () {
       var mode = this.getAttribute("data-mode");
@@ -395,22 +479,6 @@
         .then(function () { refreshMode(); });
     };
   });
-
-  // ---------- 明日计划 ----------
-  document.getElementById("btnSavePlan").onclick = function () {
-    var base = getApiBase();
-    if (!base) return;
-    var body = {
-      origin: document.getElementById("planOrigin").value.trim() || "如东荣生花苑",
-      destination: document.getElementById("planDest").value.trim() || "上海",
-      departure_time: document.getElementById("planTime").value.trim() || "06:00",
-      time_window_minutes: 30,
-      min_orders: 2,
-      max_orders: 4
-    };
-    fetch(base + "/planned_trip", { method: "PUT", headers: { "Content-Type": "application/json" }, body: JSON.stringify(body) })
-      .then(function () { document.getElementById("gpsStatus").textContent = "规划已保存"; });
-  };
 
   // ---------- 参数微调（绕路容忍 = mode2_detour_max，高收益 = mode2_high_profit_threshold） ----------
   function loadConfig() {
@@ -518,6 +586,20 @@
     window.location.replace("login.html");
   };
 
+  document.getElementById("btnContinueMatch").onclick = function () {
+    var base = getApiBase();
+    if (base) {
+      fetch(base + "/driver_mode").then(function (r) { return r.json(); }).then(function (d) {
+        var mode = d.mode || "mode2";
+        if (mode === "pause") {
+          fetch(base + "/driver_mode", { method: "PUT", headers: { "Content-Type": "application/json" }, body: JSON.stringify({ mode: "mode2" }) }).then(refreshMode);
+        }
+      });
+    }
+    document.getElementById("pushEventsList").scrollIntoView({ behavior: "smooth" });
+    document.getElementById("gpsStatus").textContent = "后端正在匹配顺路单，新单会出现在下方「顺路单」区域。";
+  };
+
   function run() {
     var locEl = document.getElementById("driverLoc");
     if (locEl) locEl.addEventListener("change", saveStateToStorage);
@@ -525,6 +607,7 @@
     document.getElementById("planPanel").classList.add("hidden");
     loadFromDb(function () {
       renderPassengerList();
+      updateEntryActions();
       refreshMode();
       loadConfig();
       refreshMode();
